concord_examples/tests/ui/old_response_custom_removed.stderr
error: `response custom` was removed in v5; use `observe rate_limit MyObserver`
 --> tests/ui/old_response_custom_removed.rs:8:9
  |
8 |         response custom RiotRateLimitHeaders
  |         ^^^^^^^^
